--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,8 @@ NEXT_PUBLIC_DROPBOX_CALLBACK_URL=http://localhost:3000/auth
 # To create your own, go to: https://developers.google.com/identity/oauth2/web/guides/get-google-api-clientid
 NEXT_PUBLIC_GOOGLE_DRIVE_CLIENT_ID=432753364585-8qg4oko082olompd6s0vedgjldd19c5f.apps.googleusercontent.com
 
-# Smart contract addresses for the Satori and Moksha testnets. These are the default values and can be overridden in the UI.
-NEXT_PUBLIC_SMART_CONTRACT_ADDRESS_SATORI_TESTNET=0x40ADfD4C913458069C28a1c5048c0a0c1589C7D9
-NEXT_PUBLIC_SMART_CONTRACT_ADDRESS_MOKSHA_TESTNET=0x0Ba2191601609370Eb3817E973C8495A724e204a
+# Smart contract addresses for the Satori testnet. These are the default values and can be overridden in the UI.
+NEXT_PUBLIC_SMART_CONTRACT_ADDRESS_SATORI_TESTNET=0x456e7fbc76e349ba21AEF05d32198016Ff33Bbe7
 
 # Public key used for encrypting the symmetric key used to encrypt a user's file. 
 # This is the default value and can be overridden in the UI. However, the DLP validator must have the corresponding private key to decrypt it and retreive the symmetric key back to decrypt the user's file.
